--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -69,33 +69,13 @@
 
 
 	// large
-	@include media('>large') {
+	@include media('>=large') {
 	    border-bottom: solid 0px $hbc-border;
 	    margin-top: 120px;
 
 		&__logo {
 			margin-left: 0;
 		}
-
-	    &--shaddow {
-			position: sticky;
-		    top: 0;
-		    max-height: $sticky-header-height;
-	        background-color: $hbc-off-white;
-		    margin-bottom: 10px;
-    	    transition: all 300ms ease-out;
-
-			.site-header__logo {
-				transition: all 200ms ease-out;
-			    height: 65px;
-		        width: 65px;
-		        margin: 0;
-			}
-	    }
-
-	    &--shaddow {
-	    	box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
-	    }
 
 	    .sticky-nav-meta {
 			transition: all 200ms ease-out;
@@ -133,9 +113,9 @@
 			}
 		}
 	}
-}
 
-.sub-page {
-	position: sticky;
-	margin-top: 0;
+	&--sub-page {
+		position: relative;
+		margin-top: 0;
+	}
 }
