--- a/_layouts/sub-page.html
+++ b/_layouts/sub-page.html
@@ -19,7 +19,7 @@
         <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
     </head>
 
-    <body class="container" aria-label="Content">
+    <body aria-label="Content">
         {% include header-subpage.html %}
         <section class="content">{{ content }}</section>
         {% include footer.html %}
