--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -14,7 +14,7 @@
 		grid-template-rows: repeat(4, 1fr);
 	    margin: auto;
 		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
-	    max-height: 560px;
+	    max-height: 60vh;
 	    overflow: hidden;
 
 		// these are overrides. defaults are set in _article-snippet.scss
@@ -86,19 +86,11 @@
 		grid-auto-rows: repeat(12, minmax(100px, auto));
 	    grid-template-areas:
 	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
-	    "art"
 	    "pg"
 	    "ft";
 
-		.featured-topics {
+		.asides {
+			grid-area: ft;
 		}
 	}
 
@@ -129,10 +121,18 @@
 		&__featured {
 			grid-template-columns: $content-side-margins-large minmax(auto, $content-width) $content-side-margins-large;
 			margin: 0 ($content-side-margins-large*-1) 0 ($content-side-margins-large*-1);
+
+			.snippet__title {
+				font-size: 48px;
+			}
 		}
 	}
 
 	@include media('>=medium', 'landscape') {
+
+		&__featured {
+	    	max-height: 80vh;
+	    }
 
 		&__remaining {
 			display: grid;
@@ -141,23 +141,14 @@
 			max-width: $content-width;
 			border-top: solid 1px $hbc-border;
 			grid-template-columns: minmax(auto, 25%) minmax(auto, 75%);
-			grid-auto-rows: repeat(11, minmax(100px, auto));
+			grid-auto-rows: minmax(50px, auto);
 		    grid-template-areas:
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
-		    "ft art"
 		    "ft art"
 		    ". pg";
 
 		    .snippet {
 				grid-row: auto;
-				padding: 0 40px;
+				padding: 0 0 0 40px;
 				border-left: solid 1px $hbc-border;
 				border-bottom: 0;
 				margin-bottom: 0px;
@@ -180,11 +171,13 @@
 				}
 			}
 
-			.featured-topics {
-				grid-area: ft;
-				position: sticky;
-				top: $sticky-header-offset;
+			.asides {
 				margin-right: 40px;
+
+				.featured-topics {
+					position: sticky;
+					top: 40px;
+				}
 			}	
 		}
 	}
@@ -214,6 +207,16 @@
 				}
 			}
 		}
+
+		&__remaining {
+
+			.asides {
+
+				.featured-topics {
+					top: $sticky-header-offset;
+				}
+			}
+		}
 	}
 
 
@@ -226,7 +229,6 @@
 		&__sub-featured {
 			padding: 0 $content-side-margins-large;
 		}
-
 
 		&__remaining {
 			padding-left: $content-side-margins-large;
