--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,4 +1,5 @@
-.site-header {
+.site-header,
+.site-header--sub-page {
     grid-area: hd;
     display: grid;
     grid-auto-rows: 1fr;
@@ -9,7 +10,6 @@
     transition: all 100ms ease-out;
     width: 100%;
     pointer-events: none;
-    position: absolute;
 
 	&__logo {
 	    grid-area: logo;
@@ -20,9 +20,9 @@
 		background-color: black;
 	    padding: 9px;
 	    margin-left: $content-side-margins;
+        transition: all 200ms ease-out;
 
 		.hbc-tech-logo{
-	        transition: all 200ms ease-out;
 		    height: 100%;
 		    width: 100%;
 		    pointer-events: auto;
@@ -73,7 +73,23 @@
 	    border-bottom: solid 0px $hbc-border;
 	    margin-top: 120px;
 
+		&--minified {
+			position: sticky;
+		    top: 0;
+		    max-height: $sticky-header-height;
+	        background-color: $hbc-off-white;
+	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
+		    margin-bottom: 10px;
+
+			.site-header__logo {
+			    height: 65px;
+		        width: 65px;
+		        margin: 0;
+			}
+		}
+
 		&__logo {
+			transition: all 200ms ease-out;
 			margin-left: 0;
 		}
 
@@ -113,9 +129,24 @@
 			}
 		}
 	}
+}
 
-	&--sub-page {
-		position: relative;
-		margin-top: 0;
+.site-header--sub-page {
+	position: relative;
+	margin-top: 0;
+
+	&--minified {
+		position: sticky;
+	    top: 0;
+	    max-height: $sticky-header-height;
+        background-color: $hbc-off-white;
+        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
+	    margin-bottom: 10px;
+
+		.site-header__logo {
+		    height: 65px;
+	        width: 65px;
+	        margin: 0;
+		}
 	}
 }
