--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -92,6 +92,19 @@
 		.asides {
 			grid-area: ft;
 		}
+
+		&--sub-page {
+			margin-top: 0;
+			border: 0;
+			padding-top: 0;
+
+			.articles {
+
+				.snippet:first-child {
+					padding-top: 0;
+				}
+			}
+		}
 	}
 
 	// small landscape
@@ -135,11 +148,8 @@
 	    }
 
 		&__remaining {
-			display: grid;
-			margin: 60px auto;
 			padding-top: $content-side-margins-large*2;
 			max-width: $content-width;
-			border-top: solid 1px $hbc-border;
 			grid-template-columns: minmax(auto, 25%) minmax(auto, 75%);
 			grid-auto-rows: minmax(50px, auto);
 		    grid-template-areas:
@@ -178,7 +188,11 @@
 					position: sticky;
 					top: 40px;
 				}
-			}	
+			}
+
+			&--sub-page {
+				padding-top: 0;
+			}
 		}
 	}
 
@@ -233,6 +247,11 @@
 		&__remaining {
 			padding-left: $content-side-margins-large;
 			padding-right: $content-side-margins-large;
+
+			&--sub-page {
+				padding-left: 0;
+				padding-right: 0;
+			}
 		}
 	}
 }
