minor layout update to sub-page header

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -80,7 +80,6 @@
 		    max-height: $sticky-header-height;
 	        background-color: $hbc-off-white;
 	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
-		    margin-bottom: 10px;
 
 			.site-header__logo {
 			    height: 65px;
@@ -138,20 +137,20 @@
 
 	// large
 	@include media('>=medium') {
-		
-		// &--minified {
-			position: sticky;
-		    top: 0;
-		    max-height: $sticky-header-height;
-	        background-color: $hbc-off-white;
-	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
-		    margin-bottom: 10px;
 
-			.site-header__logo {
-			    height: 65px;
-		        width: 65px;
-		        margin: 0;
-			}
-		// }
+		position: sticky;
+	    top: 0;
+	    max-height: $sticky-header-height;
+        background-color: $hbc-off-white;
+
+		.site-header__logo {
+		    height: 65px;
+	        width: 65px;
+	        margin: 0;
+		}
+		
+		&--minified {
+	        box-shadow: darken(rgba($hbc-highlight, 0.15), 40%) 0px 1px 3px;
+		}
 	}
 }
