--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,7 +1,23 @@
-$hbc-font-family: 'Poppins', sans-serif;
+// Typography
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,500');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Oswald:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Patua+One');
+@import url('https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
+@import url('https://fonts.googleapis.com/css?family=Crete+Round');
+
+$hbc-font-family: 'Oswald', sans-serif;;
+$hbc-font-family-serif: 'Crimson Text', serif;
+// $hbc-font-family: 'Poppins', sans-serif;
+// $hbc-font-family-serif:  'Patua One', cursive;
+@mixin italic-styles() {
+	font-family: $hbc-font-family-serif;
+	font-weight: 400i;
+	font-style: italic;
+}
 
 * {
-	font-family: $hbc-font-family;
+	font-weight: 300;
 	text-rendering: optimizeLegibility;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
@@ -14,10 +30,14 @@ h4,
 h5,
 h6 {
 	line-height: 140%;
+	font-family: $hbc-font-family-serif, serif;
+	font-weight: 500;
+	color: $hbc-black;
 }
 
 p {
-	line-height: 160%;
+	font-family: $hbc-font-family-serif, sans-serif;
+	line-height: 145%;
 	font-weight: 300;
 	font-size: 18px;
 	color: $hbc-gray-3;
@@ -47,10 +67,10 @@ li a {
 
 p ~ ul {
 	margin-bottom: 40px;
-    font-weight: 300;
+	font-family: $hbc-font-family-serif;
 
 	li {
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 	}
 }
 
