--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -18,13 +18,14 @@
 
 		.article-meta {
 			grid-area: meta;
+		    font-family: Oswald;
 
 			&__category {
 				text-transform: uppercase;
 				text-decoration: none;
 				color: $hbc-highlight;
 			    font-size: 15px;
-			    font-weight: 300;
+			    font-weight: 400;
 
 				@include special-text-link();
 			}
@@ -61,11 +62,14 @@
 			font-size: 14px;
 			color: $hbc-gray;
 
+
 			.read-time__text-1,
 			.read-time__text-2,
 			.read-time__text-3 {
 				display: inline-block;
 				margin-bottom: 7px;
+				font-size: 16px;
+				@include italic-styles();
 			}
 		}
 
