--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -5,7 +5,7 @@
     <span class="read-time__text-2">Read</span>
     <span class="read-time__text-3">Time</span>
   {% else %}
-    <span class="read-time__text-1">{{ words | divided_by:180 }} mins</span>
+    <span class="read-time__text-1">{{ words | divided_by:180 }} min</span>
     <span class="read-time__text-2">Read</span>
     <span class="read-time__text-3">Time</span>
   {% endif %}
