exploring oswald/open-sans type styles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,7 @@
 @import '../sass/base/common';
 @import '../sass/base/layout';
 @import '../sass/base/typography';
+@import '../sass/base/typography-mixins';
 @import '../sass/base/animations';
 
 // Components
