--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -7,6 +7,7 @@ $hbc-border: darken(rgba($hbc-highlight, 0.12), 35%);
 $hbc-gray: #777;
 $hbc-gray-2: #999;
 $hbc-gray-3: #4A4A4A;
+$hbc-gray-4: #222;
 
 // hbc-stripes
 $hbc-green: #00704a;
