--- a/assets/sass/components/_featured-topics.scss
+++ b/assets/sass/components/_featured-topics.scss
@@ -5,7 +5,6 @@
 	&__title {
 		padding-right: 20px;
 		margin: 0 0 15px 0;
-	    font-weight: 500;
 	}
 
 	&__list {
@@ -20,14 +19,15 @@
 		&__link {
 			text-decoration: none;
 			text-transform: uppercase;
-			color: $hbc-gray-2;
+			font-family: $hbc-font-family-01;
+		    color: $hbc-highlight;
 
 			@include special-text-link();
 		}
 	}
 
 	&__view-all-link {
-		color: $hbc-highlight;
+		color: $hbc-gray;
 		@include special-text-link();
 	}
 
