--- a/assets/sass/components/_recirc.scss
+++ b/assets/sass/components/_recirc.scss
@@ -25,8 +25,10 @@
 
 		&__view-all-link {
 			color: $hbc-highlight;
-			font-size: 18px;
-		    font-weight: 300;
+			font-size: 15px;
+			text-transform: uppercase;
+			font-family: $hbc-font-family-01;
+		    font-weight: 400;
 
 			@include special-text-link();
 		}
