--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -35,18 +35,13 @@
 		    grid-row: 5/6;
 			margin: 0 0 30px 0;
 			font-size: 32px;
-			
-			&__link {
-				padding: 0 10px 0 10px;
-			    box-decoration-break: clone;
-			    background-color: white;
-				text-decoration: none;
-				color: $hbc-black;
-				
-				&:hover {
-					color: $hbc-highlight;
-				}
-			}
+		}
+
+		.snippet__link {
+			padding: 0 10px 0 10px;
+		    box-decoration-break: clone;
+		    background-color: white;
+			@include headline-styles(anchor);
 		}
 
 
@@ -202,6 +197,10 @@
 
 		&__featured {
 	    	max-height: 600px;
+
+			.snippet__title {
+				font-size: 58px;
+			}
 	    }
 
 		&__sub-featured {
