--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -35,19 +35,20 @@
 		    grid-row: 5/6;
 			margin: 0 0 30px 0;
 			font-size: 32px;
-		}
-
-		.snippet__link {
-			padding: 0 10px 0 10px;
-		    box-decoration-break: clone;
-		    background-color: white;
-			text-decoration: none;
-			color: $hbc-black;
 			
-			&:hover {
-				color: $hbc-highlight;
+			&__link {
+				padding: 0 10px 0 10px;
+			    box-decoration-break: clone;
+			    background-color: white;
+				text-decoration: none;
+				color: $hbc-black;
+				
+				&:hover {
+					color: $hbc-highlight;
+				}
 			}
 		}
+
 
 		.snippet__meta {
 			grid-column: 2 / 3;
