type and layout updates

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,9 +9,10 @@
 
 // base
 @import '../sass/base/common';
+@import '../sass/base/helpers';
 @import '../sass/base/layout';
 @import '../sass/base/typography';
-@import '../sass/base/typography-mixins';
+@import '../sass/base/post-helper-styles';
 @import '../sass/base/animations';
 
 // Components
