--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -39,7 +39,7 @@
 		display: inline-flex;
         align-items: baseline;
         align-self: center;
-        margin: 0;
+        margin-left: 20px;
 	    opacity: 0;
 	    visibility: hidden;
 		display: none;
