--- a/assets/sass/pages/_categories-page.scss
+++ b/assets/sass/pages/_categories-page.scss
@@ -1,6 +1,6 @@
 .categories-page {
 	display: grid;
-	grid-template-columns:  3fr 1.25fr;
+	grid-template-columns: 75% 25%;
 	grid-auto-rows: minmax(50px, auto);
 	grid-template-areas:
     "header header"
@@ -10,7 +10,6 @@
 
 	.asides {
 		grid-area: cats;
-		padding-top: 28px;
 		padding-left: 40px;
 
 		.sticky-container {
@@ -47,9 +46,10 @@
 
 		&__list-header {
 			text-transform: capitalize;
-			font-weight: 500;
-			line-height: 100%;
-			margin: 20px 0 5px 0;
+
+			&:first-child {
+				margin-top: 0;
+			}
 		}
 	}
 
