--- a/assets/sass/components/_featured-topics.scss
+++ b/assets/sass/components/_featured-topics.scss
@@ -5,6 +5,7 @@
 	&__title {
 		padding-right: 20px;
 		margin: 0 0 15px 0;
+		@include render-type-style(subhead-1, $type-styles);
 	}
 
 	&__list {
@@ -18,8 +19,7 @@
 
 		&__link {
 			text-decoration: none;
-			text-transform: uppercase;
-			font-family: $hbc-font-family-01;
+			@include render-type-style(slug-1, $type-styles);
 		    color: $hbc-highlight;
 
 			@include special-text-link();
