--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -21,20 +21,15 @@
 		    font-family: Oswald;
 
 			&__category {
-				text-transform: uppercase;
-				text-decoration: none;
 				color: $hbc-highlight;
-			    font-size: 15px;
-			    font-weight: 400;
-				font-family: $hbc-font-family-01;
 
+			    @include render-type-style(slug-1, $type-styles);
 				@include special-text-link();
 			}
 
 			&__date {
 				color: $hbc-gray;
-				font-weight: 300;
-				font-family: $hbc-font-family-02;
+			    @include render-type-style(label-2, $type-styles);
 
 				&:before {
 					display: inline-block;
@@ -51,28 +46,23 @@
 
 		&__title {
 			grid-area: title;
-			font-size: 36px;
+			@include render-type-style(headline-3, $type-styles);
 		    line-height: 110%;
 		    margin: 10px 0 0 -3px;
-		    pointer-events: none;
 		}
 
 		&__read-time {
 			grid-area: read-time;
 			align-self: start;
 			margin-top: 24px;
-			font-size: 14px;
 			color: $hbc-gray;
-
 
 			.read-time__text-1,
 			.read-time__text-2,
 			.read-time__text-3 {
 				display: inline-block;
 				margin-bottom: 7px;
-				font-size: 16px;
-				font-weight: 300;
-				@include italic-styles();
+				@include render-type-style(slug-2, $type-styles);
 			}
 		}
 
@@ -126,11 +116,12 @@
 			.author {
 
 				&__name {
-					font-family: $hbc-font-family-02;
+					@include render-type-style(label-1, $type-styles);
 				}
 
 				&__job-title {
 					color: $hbc-gray;
+					@include render-type-style(label-2, $type-styles);
 				}
 
 				&__bio {
@@ -168,7 +159,6 @@
 	@include media('>medium') {
 
 		&__content {
-			padding: 0 $content-side-margins-large;
 			grid-template-columns: 90px 1fr;
 			grid-template-areas:
 			"meta meta"
@@ -179,7 +169,7 @@
 			". footer";
 
 		    &__title {
-				font-size: 62px;
+				@include render-type-style(headline-1, $type-styles);
 			}
 
 			&__share-buttons {
@@ -194,6 +184,10 @@
 						margin: 0 0 10px 0;
 						float: none;
 						opacity: 0;
+
+						&:last-child {
+						    margin-bottom: 0;
+						}
 
 						&:hover {
 							.hbc-svg-icon {
