adding unstyled search functionality

--- a/_includes/header-subpage.html
+++ b/_includes/header-subpage.html
@@ -32,5 +32,6 @@
 	        {% endif %}
         {% endif %}
     </p>
-{% include navigation.html %}
+    {% include navigation.html %}
+    {% include search-input.html %}
 </header>
