--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,6 +1,8 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/ScrollMagic.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/scrollmagic/debug.addIndicators.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/vendor/lunr/lunr.js"></script>
+
 <!-- these scripts are only for the code.gilt.com page -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/get-gh-repos.js"></script>
