search refactoring, adding css styleing to search results

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,7 @@
 
 // Components
 @import '../sass/components/header';
+@import '../sass/components/header-search';
 @import '../sass/components/footer';
 @import '../sass/components/navigation';
 @import '../sass/components/sidebar';
@@ -37,3 +38,4 @@
 @import '../sass/pages/authors-page';
 @import '../sass/pages/code-page';
 @import '../sass/pages/about-page';
+@import '../sass/pages/search-results';
