--- a/_includes/header-subpage.html
+++ b/_includes/header-subpage.html
@@ -33,5 +33,5 @@
         {% endif %}
     </p>
     {% include navigation.html %}
-    {% include search-input.html %}
+    {% include header-search.html %}
 </header>
