--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navigation">
-	<a href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link">
+	<a id="menu" href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link">
 	    <svg class="navigation__link__svg-icon" xmlns="http://www.w3.org/2000/svg">
 	        <path class="bar bar__top" d="M0,3 L30,3" />
 	        <path class="bar bar__middle" d="M0,14 L30,14" />
