--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,13 @@
-<nav class="navigation">
-	<a id="menu" href="{{ site.url }}{{ site.baseurl }}/{{ link.url }}" class="navigation__link">
+<nav id="nav" class="navigation">
+	<a href="#" class="navigation__link">
 	    <svg class="navigation__link__svg-icon" xmlns="http://www.w3.org/2000/svg">
 	        <path class="bar bar__top" d="M0,3 L30,3" />
-	        <path class="bar bar__middle" d="M0,14 L30,14" />
+	        <path class="bar bar__cross-1" d="M0,14 L30,14" />
+	        <path class="bar bar__cross-2" d="M0,14 L30,14" />
 	        <path class="bar bar__bottom" d="M0,25 L30,25" />
 	    </svg>
 	</a>
+	<section class="menu-overlay">
+		<h1>Menu</h1>
+	</section>
 </nav>
