--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -7,38 +7,106 @@
     pointer-events: auto;
 
     &__link {
-        display: inline-flex;
 		background-color: rgba($hbc-white, 0.8);
 	    border-radius: 100%;
 		padding: 10px;
 	    width: 50px;
-	    height: 50px;
+	    height: 49px;
+	    z-index: 1000;
 
 		&__svg-icon {
-		    width: 100%;
-		    height: 100%;
+		    width: 30px;
+		    height: 30px;
 		    overflow: visible !important;
 
 		    .bar {
+		    	position: relative;
 				stroke: black;
 				stroke-width: 2px;
 				stroke-linecap: round;
-
-				&__top {
-					// d: path("M0,5 L30,5");
-				}
-
-				&__middle {
-					// d: path("M0,15 L30,15");
-				}
-
-				&__bottom {
-					
-				}
-		    	
+				transform-origin: 48% 48%;
+			    transition: all 200ms ease-out;
 		    }
+		}
+    }
 
+    .menu-overlay {
+    	position: absolute;
+    	display: grid;
+    	height: 10vh;
+	    width: 100%;
+    	background-color: rgba($hbc-black, 0.9);
+	    top: 0;
+	    left: 0;
+	    opacity: 0;
+	    visibility: hidden;
+	    margin-top: -120px;
+	    transition: all 200ms ease-out;
+	    z-index: -1;
+    }
+
+
+    @include media('>medium') {
+    	&__link {
+			background-color: transparent;
+		}
+    }
+
+    &--open {
+
+		.navigation__link {
+		 	background-color: transparent;
+
+		 	&__svg-icon {
+
+		 		.bar {
+		 			stroke: white;
+
+				 	&__top {
+						// d: path("M0,5 L30,5");
+						transform: scaleX(.5) translateY(5px);
+						opacity: 0;
+					}
+
+					&__cross-1 {
+						d: path("M-5,14 L35,14");
+			    	    transform: rotate(45deg);
+					}
+
+					&__cross-2 {
+						d: path("M-5,14 L35,14");
+						transform: rotate(-45deg);
+					}
+
+					&__bottom {
+						transform: scaleX(.5) translateY(-5px);
+						opacity: 0;
+					}
+				}
+			}
 		}
 
+		.menu-overlay {
+		    visibility: visible;
+			opacity: 1;
+			pointer-events: none;
+	    	height: calc(100vh + 120px);
+		}
     }
+
+    @include media('>=large') {
+    	&__link__svg-icon:hover {
+
+	    	.bar {
+			    transition: all 150ms ease-out;
+
+	    		&__top {
+	    			d: path("M0,-1  L30,-1");
+	    		}
+	    		&__bottom {
+	    			d: path("M0,29 L30,29");
+	    		}
+	    	}
+	    }
+	}
 }
